# Bootcamp_Santander_Python

Sistema Bancario/: DesafioBankSystem.py
Sistema Bancario Funcional/: FunctionalBankSystem.py
Sistema Bancario POO/: POOBankSystem.py
Store_API/: README.txt  pyproject.toml
Store_API/app/: main.py
Store_API/app/core/: config.py
Store_API/app/crud/: product_crud.py
Store_API/app/models/: product_model.py
Store_API/app/schemas/: product.py
Store_API/app/services/: product_service.py
Store_API/app/usecases/: product_usecase.py
Store_API/tests/: test_controller.py  test_product.py  test_schemas.py  test_usecase.py
Workout_API/: README.md  alembic.ini  docker-compose.yml
Workout_API/alembic/: env.py
Workout_API/alembic/versions/: b0108b5adfa9_create_tables.py
Workout_API/app/: main.py
Workout_API/app/database/: database.py
Workout_API/app/models/: atleta_model.py  categoria_model.py  centro_treinamento_model.py
Workout_API/app/repositories/: atleta_repository.py  categoria_repository.py  centro_treinamento_repository.py
Workout_API/app/routers/: __init__.py  atleta_router.py  categoria_router.py  centro_treinamento_router.py
Workout_API/app/schemas/: atleta_schema.py  base_schema.py  categoria_schema.py  centro_treinamento_schema.py
